@@ -1,3 +1,8 @@
+2008-04-09  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* decl.c (is_variable_size): Do not unconditionally return false
+	on non-strict alignment platforms.
+
 2008-04-01  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	PR ada/33857
